--- a/tcatch2/.project
+++ b/tcatch2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tcatch2</name>
+	<name>tcatch</name>
 	<comment></comment>
 	<projects>
 	</projects>
